src/runtime/tests/golden/errors/03_feature_disabled/source.z42
namespace Demo;

void Main() {
    if (true) {
        Console.WriteLine("yes");
    }
}
